--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -21,8 +21,8 @@ New features and changes in this release:
 
 This release has the following issue:
 
-+ **Deploy <%= vars.product_name %> Errand Fails:** If you have binary logging enabled, the **Deploy <%= vars.product_name %>** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, <%= vars.product_name %> is not deployed. For instructions on solving this issue,
-see [Deploy <%= vars.product_name %> Errand Fails](./troubleshooting.html#mysql).
++ **Deploy <%= vars.product_full %> Errand Fails:** If you have binary logging enabled, the **Deploy <%= vars.product_full %>** errand fails when `log_bin_trust_function_creators` is not set to `1`. If you do not resolve this issue, <%= vars.product_full %> is not deployed. For instructions on solving this issue,
+see [Deploy <%= vars.product_full %> Errand Fails](./troubleshooting.html#mysql).
 
 ## <a id="view"></a> View Release Notes for Another Version
 
