--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -97,19 +97,19 @@ This release has the following issues:
 
 Change in this release:
 
-* <%= vars.product_name %> now uses `cflinuxfs3` as the default stack when available.
+* <%= vars.product_full %> now uses `cflinuxfs3` as the default stack when available.
 
-     `cflinuxfs2` is used when <%= vars.product_name %> is installed on an environment that does not have `cflinuxfs3`,
+     `cflinuxfs2` is used when <%= vars.product_full %> is installed on an environment that does not have `cflinuxfs3`,
       for example, a PCF v2.2 environment.
 
 ### <a id="fixed125"></a> Fixed Issues
 
 This release fixes the following issues:
 
-* In earlier versions of <%= vars.product_name %>, the tile version in the tile metadata did not match the version
-of <%= vars.product_name %>. The version numbers now match.
+* In earlier versions of <%= vars.product_full %>, the tile version in the tile metadata did not match the version
+of <%= vars.product_full %>. The version numbers now match.
 
-* This version of <%= vars.product_name %> supports using BOSH DNS in conjunction
+* This version of <%= vars.product_full %> supports using BOSH DNS in conjunction
   with the IPsec Add-on for PCF when using an internal database.
 
 ### <a id="known125"></a> Known Issues
@@ -142,11 +142,11 @@ New features and changes in this release:
     * Go is now v1.10.3
     * Product stemcell is now Ubuntu Xenial v97.x
 
-* Before using <%= vars.product_name %> v1.2.3, you must update any BOSH add-ons to support Xenial stemcells.
+* Before using <%= vars.product_full %> v1.2.3, you must update any BOSH add-ons to support Xenial stemcells.
     For more information, see [Prerequisites](./installing.html#prereqs).
-<p class="note breaking"><strong>Breaking Change: </strong> <%= vars.product_name %> v1.2.3 and later require a Xenial stemcell.
-You must manually download and import a new stemcell into the Pivotal Ops Manager Stemcell Library before deploying <%= vars.product_name %>.
-Any automation you have set up to update your <%= vars.product_name %> deployments using Trusty stemcells might break.</p>
+<p class="note breaking"><strong>Breaking Change: </strong> <%= vars.product_full %> v1.2.3 and later require a Xenial stemcell.
+You must manually download and import a new stemcell into the Pivotal Ops Manager Stemcell Library before deploying <%= vars.product_full %>.
+Any automation you have set up to update your <%= vars.product_full %> deployments using Trusty stemcells might break.</p>
 
 ### <a id="fixed123"></a> Fixed Issues
 
@@ -160,11 +160,11 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
-* When using <%= vars.product_name %> and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database,
- <%= vars.product_name %> do not function.
- This issue is fixed in <%= vars.product_name %> v1.2.5.
-* The tile version in the tile metadata might not match the version of <%= vars.product_name %>.
-These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
+* When using <%= vars.product_full %> and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database,
+ <%= vars.product_full %> do not function.
+ This issue is fixed in <%= vars.product_full %> v1.2.5.
+* The tile version in the tile metadata might not match the version of <%= vars.product_full %>.
+These version numbers are aligned as of <%= vars.product_full %> v1.2.5.
 
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
@@ -195,13 +195,13 @@ New features and changes in this release:
 
 This release has the following issues:
 
-* Users of <%= vars.product_name %> v1.2.1 are required to use escape characters in configuration passwords.
-  This is no longer required in <%= vars.product_name %> v1.2.3 and later releases.
+* Users of <%= vars.product_full %> v1.2.1 are required to use escape characters in configuration passwords.
+  This is no longer required in <%= vars.product_full %> v1.2.3 and later releases.
 
 <%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
 
-* The tile version in the tile metadata might not match the version of <%= vars.product_name %>.
-These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
+* The tile version in the tile metadata might not match the version of <%= vars.product_full %>.
+These version numbers are aligned as of <%= vars.product_full %> v1.2.5.
 
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
