--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -5,14 +5,14 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
-This topic describes how to monitor and troubleshoot <%= vars.product_name %>.
+This topic describes how to monitor and troubleshoot <%= vars.product_full %>.
 
-##<a id='monitor'></a> Monitor <%= vars.product_name %>
+##<a id='monitor'></a> Monitor <%= vars.product_full %>
 
-<%= vars.product_name %> is deployed as an app in <%= vars.platform_name %>.
+<%= vars.product_full %> is deployed as an app in <%= vars.platform_name %>.
 By default, this app is called `event-alerts` and is deployed in the `event-alerts` space within the `system` org.
 
-To monitor the performance of <%= vars.product_name %> or to retrieve troubleshooting information, you can do one or more of the following:
+To monitor the performance of <%= vars.product_full %> or to retrieve troubleshooting information, you can do one or more of the following:
 
 * Use the Cloud Foundry Command Line Interface (cf CLI) to obtain logs for the `event-alerts` app.
   For more information, see [Application Logging in Cloud Foundry](https://docs.pivotal.io/pivotalcf/devguide/deploy-apps/streaming-logs.html).
@@ -23,15 +23,15 @@ To monitor the performance of <%= vars.product_name %> or to retrieve troublesho
   and transmits custom app metrics through Loggregator to the service.
   For more information, see [Pivotal Metrics Forwarder](https://docs.pivotal.io/metrics-forwarder/).
   <p class="note"><strong>Note:</strong> When Pivotal Metrics Forwarder is not installed,
-  <%= vars.product_name %> produces an error.
+  <%= vars.product_full %> produces an error.
      This indicates that no custom metrics are being published to the Firehose.
      It does not indicate a problem with the system.</p>
 
-##<a id="scale"></a> Scale <%= vars.product_name %>
+##<a id="scale"></a> Scale <%= vars.product_full %>
 
-You might need to scale <%= vars.product_name %> to improve performance.
+You might need to scale <%= vars.product_full %> to improve performance.
 
-To scale <%= vars.product_name %>, perform the following steps:
+To scale <%= vars.product_full %>, perform the following steps:
 
 1. Use the cf CLI to log in to your <%= vars.platform_name %> deployment as an admin. For example:
 	<pre class="terminal">$ cf login
@@ -49,26 +49,26 @@ To scale <%= vars.product_name %>, perform the following steps:
 
 ##<a id="reduce-notifications"></a> Reduce Notifications
 
-If <%= vars.product_name %> is receiving frequent event notifications, you can do one or both of the following:
+If <%= vars.product_full %> is receiving frequent event notifications, you can do one or both of the following:
 
 * Unsubscribe from alerts that have minimal action.
 * Increase threshold values to supply better indicators for action.
 
-For more information about unsubscribing from alerts and increasing threshold values, see [Using <%= vars.product_name %>](using.html).
+For more information about unsubscribing from alerts and increasing threshold values, see [Using <%= vars.product_full %>](using.html).
 
 ##<a id="t-shoot-errors"></a> Troubleshooting Errors
 
 This section provides information on how to troubleshooting specific errors or error messages.
 
-###<a id="errand"></a> Deploy <%= vars.product_name %> Errand Fails
+###<a id="errand"></a> Deploy <%= vars.product_full %> Errand Fails
 
 This problem happens when you do not have `SUPER` privileges and binary logging is enabled.
-If you do not resolve this issue, <%= vars.product_name %> is not deployed.
+If you do not resolve this issue, <%= vars.product_full %> is not deployed.
 
 #### Symptom
 
 When you **Apply Changes**, you see in the Pivotal Ops Manager installation pane that
-the **Deploy <%= vars.product_name %>** errand fails with the following error:
+the **Deploy <%= vars.product_full %>** errand fails with the following error:
 
 <pre class="terminal">
 You do not have the SUPER privilege and
@@ -86,19 +86,19 @@ in the open source MySQL documentation.
 
 To solve this issue, do the following:
 
-  1. Drop the <%= vars.product_name %> database and recreate it. For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
+  1. Drop the <%= vars.product_full %> database and recreate it. For information about dropping a database, see [DROP DATABASE Syntax](https://dev.mysql.com/doc/refman/en/drop-database.html) in the open source MySQL documentation.
   2. Do one of the following:
      * In the database, disable binary logging. For information about disabling binary logging, see [The Binary Log](https://dev.mysql.com/doc/refman/en/binary-log.html) in the open source MySQL documentation.
      * In the database, set `log_bin_trust_function_creators` to `1`. For information about `log_bin_trust_function_creators`, see [log\_bin\_trust\_function\_creators](https://dev.mysql.com/doc/refman/en/replication-options-binary-log.html#sysvar_log_bin_trust_function_creators) in the open source MySQL documentation.
-  3. In Ops Manager, **Apply Changes** with the **Deploy <%= vars.product_name %>** errand checked.
+  3. In Ops Manager, **Apply Changes** with the **Deploy <%= vars.product_full %>** errand checked.
 
-###<a id="ip-binding"></a> <%= vars.product_name %> Fails to Release IP Address Bindings on MySQL Upgrade
+###<a id="ip-binding"></a> <%= vars.product_full %> Fails to Release IP Address Bindings on MySQL Upgrade
 
 #### Symptom
 
 When upgrading from MySQL for Pivotal Platform v2.4 to v2.5, all service bindings must be changed from
 IP address based bindings to hostname based bindings.
-<%= vars.product_name %> sometimes fails to release IP address bindings after following the procedure in
+<%= vars.product_full %> sometimes fails to release IP address bindings after following the procedure in
 [Deprecated Service Bindings Found (Upgrade Error)](https://docs.pivotal.io/p-mysql/2-5/troubleshoot.html#deprecated-service-bindings).
 
 #### Explanation
@@ -111,7 +111,7 @@ Recreate the service key by running:
 
 <p class="note warning">
   <strong>Warning: </strong> You must use the username <code>migrations_user</code> in the command below.
-  Without this, a random name is generated that causes <%= vars.product_name %> to fail.
+  Without this, a random name is generated that causes <%= vars.product_full %> to fail.
 </p>
 
 ```
