Add 'id' for t-shooting errand

--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -62,7 +62,7 @@ This section provides information on how to troubleshooting specific errors or e
 
   
   <%= partial vars.path_to_partials + "/troubleshoot-template", locals: {
-
+	id: 'errand-fails'
         description: 'Deploy Event Alerts Errand Fails',
         symptom:<<~DESC,
 
