add release note for 1.2.9 - change the compatible HW version to 1.4+ [#168770219]
Signed-off-by: Glenn Oppegard <goppegard@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -9,6 +9,27 @@ owner: Event Alerts
 
 <%= partial vars.path_to_partials + "/pcf-name-change" %>
 
+##<a id="1-2-9"></a> v1.2.9
+
+**Release Date: November, 5, 2019**
+
+### <a id="features129"></a> Features
+
+This release updates the product name from Pivotal Cloud Foundry Event Alerts to Pivotal Event Alerts.
+
+###<a id="known129"></a> Known Issues
+
+This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+
 ##<a id="1-2-8"></a> v1.2.8
 
 **Release Date: July 2, 2019**
