edits to PR #34 [#169573366]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -9,12 +9,12 @@ owner: Event Alerts
 
 <%= partial vars.path_to_partials + "/pcf-name-change" %>
 
-This documentation describes <%= vars.product_full %>.
+This documentation describes <%= vars.product_name %>.
 
 ## <a id='overview'></a>Overview
 
 As an admin, you may want to receive notifications about important events that occur on your system.
-The <%= vars.product_full %> service gives you the option to set up alerts for a variety of events.
+The <%= vars.product_name %> service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
 Notification topics are monitored by publishers---<%= vars.platform_name %> components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
@@ -33,23 +33,23 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-<%= vars.product_full %> v1.2.3 and later supports Pivotal Healthwatch as a publisher.
+<%= vars.product_name %> v1.2.3 and later supports Pivotal Healthwatch as a publisher.
 For general information about Pivotal Healthwatch, see [Pivotal Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
 
-The following table provides version and version-support information about <%= vars.product_full %>.
+The following table provides version and version-support information about <%= vars.product_name %>.
 
 <table class="nice">
     <th>Element</th>
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>1.2.8</td>
+        <td>1.2.9</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>July 2, 2019</td>
+        <td>November 5, 2019</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Ops Manager version(s)</td>
@@ -61,7 +61,7 @@ The following table provides version and version-support information about <%= v
     </tr>
     <tr>
         <td>Compatible Pivotal Healthwatch version(s)</td>
-        <td>1.4+</td>
+        <td>1.4</td>
     </tr>
     <tr>
         <td>MySQL</td>
