--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -14,10 +14,10 @@ Admins can configure event alerts using the CF CLI.
 
 ##<a id='prerequisite'></a> Prerequisite
 
-You must install both the <%= vars.product_full %> tile and plugin as described in the following sections:
+You must install both the <%= vars.product_name %> tile and plugin as described in the following sections:
 
-* [Download and Install the <%= vars.product_full %> Tile](./installing.html#install)
-* [Install the <%= vars.product_full %> Plugin](./installing.html#plugin)
+* [Download and Install the <%= vars.product_name %> Tile](./installing.html#install)
+* [Install the <%= vars.product_name %> Plugin](./installing.html#plugin)
 
 
 ##<a id='targets'></a> Create Targets for Alerts
@@ -95,13 +95,13 @@ You can also use webhook targets to log or store alerts for auditing purposes.
 ####<a name='formats'></a> About Webhook Request Formats
 
 Webhook requests are not a standardized format. This means that the request payload
-from <%= vars.product_full %> must be changed to a format compatible with the webhook receiver.
-For example, for PagerDuty, the JSON request payload from <%= vars.product_full %> must be changed to
+from <%= vars.product_name %> must be changed to a format compatible with the webhook receiver.
+For example, for PagerDuty, the JSON request payload from <%= vars.product_name %> must be changed to
 the format required for PagerDuty webhooks. For information about PagerDuty webhook payloads,
 see the [PagerDuty documentation](https://v2.developer.pagerduty.com/docs/webhooks-v2-overview).
 
 The format change can be done through a web server proxy. The proxy receives the webhook request
-from <%= vars.product_full %>, transforms the request payload to the new format, and forwards the request
+from <%= vars.product_name %>, transforms the request payload to the new format, and forwards the request
 to the end receiver, for example, PagerDuty.
 
 #### Procedure
@@ -121,7 +121,7 @@ To create a webhook target, do the following:
   <pre class="terminal">$ cf eva-create-target my-webhook webhook https<span>:</span>//example.com/pcf-events/foundation-prod</pre>
 
     This creates a target named `my-webhook`.
-    <%= vars.product_full %> posts a JSON webhook payload to `https://example.com/pcf-events/foundation-prod`
+    <%= vars.product_name %> posts a JSON webhook payload to `https://example.com/pcf-events/foundation-prod`
     in the following format:
 
     ```
@@ -144,7 +144,7 @@ To create a webhook target, do the following:
       <li> <code>healthwatch</code> is the alert publisher.</li>
       <li> <code>system.cpu.user</code> is the alert topic.</li>
       <li> The <code>metadata</code> keys shown, <code>level</code> <code>foundation</code> and <code>job</code>,
-           represent what the publisher sends to <%= vars.product_full %>
+           represent what the publisher sends to <%= vars.product_name %>
            and can be different for each alert topic.</li>
     </ul>
 
@@ -259,9 +259,9 @@ You then subsribe this target to all alert topics from the publisher `healthwatc
 5. Verify a webhook message was posted to the webhook-ops
 URL. In this example, that is `http://example.com/healthwatch-events/foundation-prod`.
 
-##<a id='command_help'></a> <%= vars.product_full %> Plugin Commands
+##<a id='command_help'></a> <%= vars.product_name %> Plugin Commands
 
-Use the following <%= vars.product_full %> plugin commands to perform various tasks related to event alerts.
+Use the following <%= vars.product_name %> plugin commands to perform various tasks related to event alerts.
 
 <table>
   <tr>
@@ -271,7 +271,7 @@ Use the following <%= vars.product_full %> plugin commands to perform various ta
   <tr>
     <td><strong>eva-api</strong></td>
     <td>
-    Displays the endpoint and version of the <%= vars.product_full %> API server.
+    Displays the endpoint and version of the <%= vars.product_name %> API server.
     </td>
   </tr>
   <tr>
@@ -345,7 +345,7 @@ Use the following <%= vars.product_full %> plugin commands to perform various ta
   </tr>
 </table>
 
-You can also use commands to get help directly in the terminal window while working with the <%= vars.product_full %> plugin.
+You can also use commands to get help directly in the terminal window while working with the <%= vars.product_name %> plugin.
 
 * To list all event alert commands:
 
