--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -61,7 +61,7 @@ The following table provides version and version-support information about <%= v
     </tr>
     <tr>
         <td>Compatible Pivotal Healthwatch version(s)</td>
-        <td>1.3</td>
+        <td>1.4 and later</td>
     </tr>
     <tr>
         <td>MySQL</td>
