set Healthwatch compatiblity to 1.4 and later[#169573366]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -11,7 +11,7 @@ owner: Event Alerts
 
 ##<a id="1-2-9"></a> v1.2.9
 
-**Release Date: November, 5, 2019**
+**Release Date: November 5, 2019**
 
 ### <a id="features129"></a> Features
 
