--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -26,8 +26,8 @@ To monitor the performance of <%= vars.product_name %> or to retrieve troublesho
   <%= vars.product_name %> produces an error.
      This indicates that no custom metrics are being published to the Firehose.
      It does not indicate a problem with the system.</p>
-* Use the Pivotal Metrics Registrar service. You must install the plugin and register the `event-alerts` app as a source 
-  of metrics. For instructions,
+* Use the Pivotal Metrics Registrar service. To use this service, you must install the plugin
+  and register the `event-alerts` app as a metrics source. For instructions,
   see [Using Metric Registrar](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html).
 
 
