add release note for slack webhook validation - includes adding 1.2.10 section to release notes [#167401459]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -9,6 +9,16 @@ owner: Event Alerts
 
 <%= partial vars.path_to_partials + "/pcf-name-change" %>
 
+##<a id="1-2-10"></a> v1.2.10
+
+**Release Date: November TBD, 2019**
+
+### <a id="features1210"></a> Features
+
+New features and changes in this release:
+
+* Removes the requirement that the slack target URLs contain "slack.com". 
+
 ##<a id="1-2-9"></a> v1.2.9
 
 **Release Date: November 5, 2019**
