add structured log format as new feature [169455550]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -18,6 +18,7 @@ owner: Event Alerts
 New features and changes in this release:
 
 * Removes the requirement that the slack target URLs contain "slack.com". 
+* Emits custom metrics in [structured log format](https://docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#register-log-format).
 
 ##<a id="1-2-9"></a> v1.2.9
 
