add known issues section for 1.2.10

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -18,7 +18,19 @@ owner: Event Alerts
 New features and changes in this release:
 
 * Removes the requirement that the slack target URLs contain "slack.com". 
-* Emits custom metrics in [structured log format](https://docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#register-log-format).
+* Emits custom metrics in [structured log format](https://docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#register-log-format). 
+   
+###<a id="known1210"></a> Known Issues
+
+This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
 ##<a id="1-2-9"></a> v1.2.9
 
