add fixed issue for 1.2.10 [169455550]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -19,7 +19,13 @@ New features and changes in this release:
 
 * Removes the requirement that the slack target URLs contain "slack.com". 
 * Emits custom metrics in [structured log format](https://docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#register-log-format). 
-   
+
+### <a id="fixed1210"></a> Fixed Issues
+
+This release fixes the following issue:
+
+* In earlier versions, <%= vars.product_name %> failed to emit custom metrics on PAS versions 2.5 and above.
+
 ###<a id="known1210"></a> Known Issues
 
 This release has the following issues:
