add rn/edit product snapshot [#169659031]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -45,11 +45,11 @@ The following table provides version and version-support information about <%= v
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>1.2.9</td>
+        <td>1.2.10</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>November 5, 2019</td>
+        <td>November XXX, 2019</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Ops Manager version(s)</td>
