add known issue for custom metrics to 1.2.9 - docs team to variablize and add to earlier versions bc they rock [169455550]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -66,6 +66,8 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+* <%= vars.product_name %> fails to emit custom metrics on Pivotal Application Service v2.5 and later.
+  This issue is fixed in <%= vars.product_name %> v1.2.10.
 
 ##<a id="1-2-8"></a> v1.2.8
 
