--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -19,8 +19,8 @@ To monitor the performance of <%= vars.product_name %> or to retrieve troublesho
 * Use the Pivotal App Metrics service.
   For more information, see [Pivotal App Metrics](https://docs.pivotal.io/app-metrics/index.html).
 * Use the Pivotal Metrics Registrar service. To use this service, you must install the plugin
-  and register the `event-alerts` app as a metrics source. For instructions,
-  see [Using Metric Registrar](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html).
+  and register the `event-alerts` app as a `json` metrics source. For instructions,
+  see [Using Metric Registrar](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#register-log-format).
 * Use the Pivotal Metrics Forwarder service.
   The `event-alerts` app detects if you have an available instance of Pivotal Metrics Forwarder
   and transmits custom app metrics through Loggregator to the service.
