add ki partial/small style edit [#169659031]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -66,8 +66,7 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
-* <%= vars.product_name %> fails to emit custom metrics on Pivotal Application Service v2.5 and later.
-  This issue is fixed in <%= vars.product_name %> v1.2.10.
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 ##<a id="1-2-8"></a> v1.2.8
 
@@ -92,6 +91,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 ##<a id="1-2-7"></a> v1.2.7
 
@@ -126,6 +127,8 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
 ##<a id="1-2-6"></a> v1.2.6
 
 **Release Date: December 7, 2018**
@@ -148,6 +151,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 ##<a id="1-2-5"></a> v1.2.5
 
@@ -181,6 +186,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 ##<a id="1-2-3"></a> v1.2.3
 
@@ -230,6 +237,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
 ##<a id="1-2-1"></a> v1.2.1
 
 **Release Date: July 17, 2018**
@@ -266,6 +275,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 ## <a id="view"></a> View Release Notes for Another Version
 
