add note to rn [#169659031]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -22,8 +22,11 @@ Slack targets with webhooks from other messaging platforms. For instructions for
 Slack targets, see [Create Slack Targets](./using.html#slack_targets).
 * Adds support for Metric Registrar.
 This enables <%= vars.product_name %> to emit custom app metrics in a structured log format.
-For more information about Metric Registrar,
-see [Using Metric Registrar](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#register-log-format).
+To use this service, you must install the plugin and register the `event-alerts` app as a JSON metrics source. 
+For instructions,
+  see [Install the Plugin](https:/_/docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#install-plugin)
+  and [Register a Structured Log Format](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#register-
+  log-format) in _Using Metric Registrar_.
 
 ### <a id="fixed1210"></a> Fixed Issues
 
