specify mysql plan as single-node in install/config section [#169630083]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -97,6 +97,8 @@ Follow the steps below to configure MySQL settings.
 
 #### Use the MySQL for Pivotal Platform v2 Service
 
+<p class="note"><strong>Note:</strong> The service plan must be a single-node plan.</p>
+
 If you have MySQL for Pivotal Platform v2.0 or later installed and want to use it for <%= vars.product_name %>,
 follow the steps below.
 
