add bug fix for handling db user/pass [#169630144]
Signed-off-by: Huan Wang <huwang@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -34,6 +34,7 @@ This release fixes the following issue:
 
 * <%= vars.product_name %> no longer fails to emit custom metrics on
 Pivotal Application Service v2.5 and later.
+* <%= vars.product_name %> handles special characters in external database username and password properly.
 
 ###<a id="known1210"></a> Known Issues
 
