--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -22,7 +22,7 @@ Slack targets with webhooks from other messaging platforms. For instructions for
 Slack targets, see [Create Slack Targets](./using.html#slack_targets).
 * Adds support for Metric Registrar.
 This enables <%= vars.product_name %> to emit custom app metrics in a structured log format.
-To use this service, you must install the plugin and register the `event-alerts` app as a JSON metrics source. 
+To use this service, you must install the plugin and register the `event-alerts` app as a JSON metrics source.
 For instructions,
   see [Install the Plugin](https:/_/docs.pivotal.io/platform/application-service/2-7/metric-registrar/using.html#install-plugin)
   and [Register a Structured Log Format](https://docs.pivotal.io/platform/application-service/metric-registrar/using.html#register-
@@ -34,7 +34,8 @@ This release fixes the following issue:
 
 * <%= vars.product_name %> no longer fails to emit custom metrics on
 Pivotal Application Service v2.5 and later.
-* <%= vars.product_name %> handles special characters in external database username and password properly.
+* <%= vars.product_name %> no longer fails to connect to an external MySQL database
+when the username or password for the database contains special characters.
 
 ###<a id="known1210"></a> Known Issues
 
