--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -16,6 +16,7 @@ You must have the following in order to install <%= vars.product_name %>:
 
 + Pivotal Application Service v2.1.x or later
 + MySQL for Pivotal Platform v2 or credentials for an existing external MySQL database v5.7 or later.
+  + If you are using MySQL for Pivotal Platform v2, you must configure a single node service plan.
   + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the <%= vars.product_name %> tile
@@ -97,14 +98,13 @@ Follow the steps below to configure MySQL settings.
 
 #### Use the MySQL for Pivotal Platform v2 Service
 
-<p class="note"><strong>Note:</strong> The service plan must be a single-node plan.</p>
+If you have MySQL for Pivotal Platform v2.0 or later installed and want to use the service:
 
-If you have MySQL for Pivotal Platform v2.0 or later installed and want to use it for <%= vars.product_name %>,
-follow the steps below.
+1. Click **MySQL Settings**.
 
-1. Click the **MySQL Settings** tab.
-
-1. Select **Pivotal MySQL Service** and enter the service plan to use. For example, `db-small`.
+1. Select **Pivotal MySQL Service**.
+1. Enter the MySQL for Pivotal Platform service plan you want to use.
+The service plan you enter must be a single node plan. For example, `db-small`.
   ![MySQL Settings Service Option](images/mysql-settings-service.png)
 
 1. Click **Save**.
