add external database creds KI [#169659031]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -31,6 +31,7 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-8"></a> v1.2.8
 
@@ -55,6 +56,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-7"></a> v1.2.7
 
@@ -89,6 +92,8 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/external-database" %>
+
 ##<a id="1-2-6"></a> v1.2.6
 
 **Release Date: December 7, 2018**
@@ -111,6 +116,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-5"></a> v1.2.5
 
@@ -144,6 +151,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-3"></a> v1.2.3
 
@@ -193,6 +202,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/external-database" %>
+
 ##<a id="1-2-1"></a> v1.2.1
 
 **Release Date: July 17, 2018**
@@ -229,6 +240,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ## <a id="view"></a> View Release Notes for Another Version
 
