add external database creds KI [#169659031]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -73,6 +73,8 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/external-database" %>
+
 ##<a id="1-2-8"></a> v1.2.8
 
 **Release Date: July 2, 2019**
@@ -98,6 +100,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-7"></a> v1.2.7
 
@@ -134,6 +138,8 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/external-database" %>
+
 ##<a id="1-2-6"></a> v1.2.6
 
 **Release Date: December 7, 2018**
@@ -158,6 +164,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-5"></a> v1.2.5
 
@@ -193,6 +201,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-3"></a> v1.2.3
 
@@ -244,6 +254,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 
 <%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/external-database" %>
+
 ##<a id="1-2-1"></a> v1.2.1
 
 **Release Date: July 17, 2018**
@@ -282,6 +294,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ## <a id="view"></a> View Release Notes for Another Version
 
