add custom metrics KI [#169659031]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -31,6 +31,8 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
 <%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-8"></a> v1.2.8
@@ -56,6 +58,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/external-database" %>
 
@@ -92,6 +96,8 @@ This release has the following issues:
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
 <%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-6"></a> v1.2.6
@@ -116,6 +122,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/external-database" %>
 
@@ -151,6 +159,8 @@ This release has the following issues:
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/external-database" %>
 
@@ -202,6 +212,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
 
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
+
 <%= partial vars.path_to_partials + "/eva/external-database" %>
 
 ##<a id="1-2-1"></a> v1.2.1
@@ -240,6 +252,8 @@ These version numbers are aligned as of <%= vars.product_name %> v1.2.5.
 <%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/custom-metrics-ki" %>
 
 <%= partial vars.path_to_partials + "/eva/external-database" %>
 
