--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -1,6 +1,6 @@
 ---
 title: Pivotal Event Alerts
-owner: Event Alerts
+owner: Event Alerts<%# Use <%= vars.product_short %>
 ---
 
 <strong><%= modified_date %></strong>
@@ -9,12 +9,12 @@ owner: Event Alerts
 
 <%= partial vars.path_to_partials + "/pcf-name-change" %>
 
-This documentation describes <%= vars.product_name %>.
+This documentation describes <%= vars.product_full %>.
 
 ## <a id='overview'></a>Overview
 
-As an admin, you may want to receive notifications about important events that occur on your system.
-The <%= vars.product_name %> service gives you the option to set up alerts for a variety of events.
+As an admin, you might want to receive notifications about important events that occur on your system.
+The <%= vars.product_short %> service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
 Notification topics are monitored by publishers---<%= vars.platform_name %> components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
@@ -33,12 +33,12 @@ Admins can configure event alerts using the Cloud Foundry Command Line Interface
 
 ## <a id='publishers'></a>Supported Publishers
 
-<%= vars.product_name %> v1.2.3 and later supports Pivotal Healthwatch as a publisher.
+<%= vars.product_short %> v1.2.3 and later supports Pivotal Healthwatch as a publisher.
 For general information about Pivotal Healthwatch, see [Pivotal Healthwatch](https://docs.pivotal.io/pcf-healthwatch/).
 
 ## <a id="snapshot"></a>Product Snapshot
 
-The following table provides version and version-support information about <%= vars.product_name %>.
+The following table provides version and version-support information about <%= vars.product_short %>.
 
 <table class="nice">
     <th>Element</th>
@@ -52,15 +52,15 @@ The following table provides version and version-support information about <%= v
         <td>November 5, 2019</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Ops Manager version(s)</td>
+        <td>Compatible Pivotal Ops Manager versions</td>
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Application Service version(s)</td>
+        <td>Compatible <%= vars.app_runtime_full %> versions</td>
         <td>2.3, 2.4, 2.5, 2.6, and 2.7</td>
     </tr>
     <tr>
-        <td>Compatible Pivotal Healthwatch version(s)</td>
+        <td>Compatible Pivotal Healthwatch versions</td>
         <td>1.4 and later</td>
     </tr>
     <tr>
