--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -5,12 +5,12 @@ owner: Event Alerts
 
 <strong><%= modified_date %></strong>
 
-This topic describes how to install and configure <%= vars.product_full %>. For information on how to use this product,
-see [Using <%= vars.product_full %>](./using.html).
+This topic describes how to install and configure <%= vars.product_full %>.
+For information on how to use this product, see [Using <%= vars.product_full %>](./using.html).
 
 ##<a id='prereqs'></a> Prerequisites
 
-<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for Pivotal Platform  v2 or external MySQL credentials header abour the issue. See 1.2 for example. -->
+<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for Pivotal Platform  v2 or external MySQL credentials header about the issue. See 1.2 for example. -->
 
 You must have the following in order to install <%= vars.product_full %>:
 
@@ -42,7 +42,7 @@ This adds the tile to your staging area.
 
 ## <a id="config-tile"></a> Configure the Tile
 
-Follow the stops below to configure the <%= vars.product_full %> tile.
+Follow the procedures below to configure the <%= vars.product_full %> tile.
 
 ### <a id="azs"></a> Configure AZs and Networks
 
@@ -78,7 +78,7 @@ Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.produ
 ### <a id="event-alerts-alerting-config"></a> (Optional) Configure Scaling Settings
 
 You can scale <%= vars.product_full %> by adding additional instances of the app.
-Follow the steps below to optionally configure scaling settings.
+Follow the steps below to configure scaling settings.
 
 1. Click the **Scale** tab.
 
@@ -95,9 +95,9 @@ To use the MySQL for Pivotal Platform  v2 service, you must have MySQL for Pivot
 
 Follow the steps below to configure MySQL settings.
 
-#### Use the MySQL for Pivotal Platform  v2 Service
+#### Use the MySQL for Pivotal Platform v2 Service
 
-If you have MySQL for Pivotal Platform  v2.0 or later installed and want to use it for <%= vars.product_full %>,
+If you have MySQL for Pivotal Platform v2.0 or later installed and want to use it for <%= vars.product_full %>,
 follow the steps below.
 
 1. Click the **MySQL Settings** tab.
