Replaced product strings and fixed other style errors [#169876282]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: PCF Event Alerts 
+title: PCF Event Alerts
 owner: PCF Event Alerts
 ---
 
@@ -9,7 +9,7 @@ This documentation describes PCF Event Alerts.
 
 ## <a id='overview'></a>Overview
 
-As a PCF admin, you may want to receive notifications about important events that occur on your system. 
+As a PCF admin, you may want to receive notifications about important events that occur on your system.
 The PCF Event Alerts service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
 Notification topics are monitored by publishers---PCF components that emit events.
@@ -18,7 +18,7 @@ You can send these notifications using email, Slack, or webhook integration.
 For example, you can subscribe to a topic from [PCF Healthwatch](http://docs.pivotal.io/pcf-healthwatch/1-2/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
-PCF users with admin permissions can run event alert commands and subscribe to alerts. 
+PCF users with admin permissions can run event alert commands and subscribe to alerts.
 Admins can configure event alerts using the Cloud Foundry Command Line Interface (cf CLI) tool.
 
 ## <a id='features'></a>Key Features
@@ -48,7 +48,7 @@ The following table provides version and version-support information about PCF E
         <td>December 14, 2018</td>
     </tr>
     <tr>
-        <td>Compatible Ops Manager version(s)</td>
+        <td>Compatible <%= vars.ops_manager_full %> versions</td>
         <td>2.2 and 2.1</td>
     </tr>
     <tr>
